@@ -4,6 +4,7 @@
   * Added "lr_pos" and "lr_neg" to 'coords' (issue #102)
   * Deprecated 'transpose', 'as.list', 'as.matrix' and 'drop' in 'coords'
   * 'coords' with partial.auc now interpolates bounds when needed 
+  * Added 'ignore.partial.auc' argument to 'coords'  
 
 1.18.5 (2023-11-01):
   * Fixed formula input when given as variable and combined with `with` (issue #111)
